feat: initial layout

--- a/apps/www/src/content/docs/index.mdx
+++ b/apps/www/src/content/docs/index.mdx
@@ -8,9 +8,7 @@ hero:
   actions:
     - text: Get Started
       link: /docs
-      icon: right-arrow
-      variant: primary
     - text: GitHub
       link: https://github.com/adrian-ub/shadcn-ng
-      icon: external
+      variant: secondary
 ---
