--- a/apps/www/src/content/docs/docs/components/alert.mdx
+++ b/apps/www/src/content/docs/docs/components/alert.mdx
@@ -6,6 +6,7 @@ description: Displays a callout for user attention.
 import { Tabs, TabItem, Code } from "@astrojs/starlight/components";
 import { Steps } from "@astrojs/starlight/components";
 import ComponentPreview from "@/components/ComponentPreview.astro";
+import ComponentSource from "@/components/ComponentSource.astro";
 
 <ComponentPreview name="alert-demo" />
 
@@ -13,7 +14,7 @@ import ComponentPreview from "@/components/ComponentPreview.astro";
 
 <Tabs>
   <TabItem label="CLI">
-    ```bash
+    ```bash frame="code"
     npx shadcn-ng@latest add alert
     ```
   </TabItem>
@@ -21,6 +22,7 @@ import ComponentPreview from "@/components/ComponentPreview.astro";
   <TabItem label="Manual">
     <Steps>
         1. Copy and paste the following code into your project.
+            <ComponentSource name="alert" />
 
         2. Update the import paths to match your project setup.
     </Steps>
@@ -46,3 +48,13 @@ import {
     </div>
 </div>
 ```
+
+## Examples
+
+### Default
+
+<ComponentPreview name="alert-demo" />
+
+### Destructive
+
+<ComponentPreview name="alert-destructive" />
