refactor: remove unused Code import in alert component

--- a/apps/www/src/content/docs/docs/components/alert.mdx
+++ b/apps/www/src/content/docs/docs/components/alert.mdx
@@ -3,7 +3,7 @@ title: Alert
 description: Displays a callout for user attention.
 ---
 
-import { Tabs, TabItem, Code } from "@astrojs/starlight/components";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 import { Steps } from "@astrojs/starlight/components";
 import ComponentPreview from "@/components/ComponentPreview.astro";
 import ComponentSource from "@/components/ComponentSource.astro";
