feat: Add badge examples for different variants

--- a/apps/www/src/content/docs/docs/components/badge.mdx
+++ b/apps/www/src/content/docs/docs/components/badge.mdx
@@ -37,3 +37,21 @@ import { UbBadgeDirective } from "@/components/ui/badge.directive";
 ```angular-html
 <div ubBadge variant="outline">Badge</div>
 ```
+
+## Examples
+
+### Default
+
+<ComponentPreview name="badge-demo" />
+
+### Secondary
+
+<ComponentPreview name="badge-secondary" />
+
+### Outline
+
+<ComponentPreview name="badge-outline" />
+
+### Destructive
+
+<ComponentPreview name="badge-destructive" />
