feat: add Astro installation guide

--- a/apps/www/src/content/docs/docs/installation/index.mdx
+++ b/apps/www/src/content/docs/docs/installation/index.mdx
@@ -13,6 +13,11 @@ import { LinkCard, CardGrid } from "@astrojs/starlight/components";
     href="/docs/installation/angular"
     class="!no-underline"
   />
+  <LinkCard
+    title="Astro"
+    href="/docs/installation/astro"
+    class="!no-underline"
+  />
 </CardGrid>
 
 ## TypeScript
