feat: Add theming documentation

--- a/apps/www/src/content/docs/docs/components-json.mdx
+++ b/apps/www/src/content/docs/docs/components-json.mdx
@@ -3,7 +3,7 @@ title: components.json
 description: Configuration for your project.
 ---
 
-import { Steps, Aside } from "@astrojs/starlight/components";
+import { Aside } from "@astrojs/starlight/components";
 
 The `components.json` file holds configuration for your project.
 
