feat: update title delimiter in Astro configuration

--- a/apps/www/src/content/docs/index.mdx
+++ b/apps/www/src/content/docs/index.mdx
@@ -2,6 +2,9 @@
 title: shadcn-ng
 description: Beautifully designed components that you can copy and paste into your apps.
 template: splash
+head:
+  - tag: title
+    content: shadcn-ng
 hero:
   title: Build your component library
   tagline: Beautifully designed components that you can copy and paste into your apps.
