refactor: update table directive import path

--- a/apps/www/src/content/docs/docs/components/table.mdx
+++ b/apps/www/src/content/docs/docs/components/table.mdx
@@ -39,7 +39,7 @@ import {
   UbTableHeadDirective,
   UbTableBodyDirective,
   UbTableCellDirective,
-} from "@/registry/default/ui/table.directive";
+} from "@/components/ui/table.directive";
 ```
 
 ```angular-html
