refactor: update accordion component imports

--- a/apps/www/src/content/docs/docs/components/accordion.mdx
+++ b/apps/www/src/content/docs/docs/components/accordion.mdx
@@ -68,12 +68,11 @@ import { Steps } from "@astrojs/starlight/components";
 
 ```ts
 import {
-    RdxAccordionContentDirective,
-    RdxAccordionHeaderDirective,
-    RdxAccordionItemDirective,
-    RdxAccordionRootDirective,
-    RdxAccordionTriggerDirective
-} from '@radix-ng/primitives/accordion';
+    UbAccordionDirective,
+    UbAccordionItemDirective,
+    UbAccordionTriggerDirective,
+    UbAccordionContentDirective
+} from '@/components/ui/accordion.directive';
 ```
 
 ```angular-html
