docs: refactor Steps and Step

--- a/docs/src/content/docs/components/button.mdx
+++ b/docs/src/content/docs/components/button.mdx
@@ -22,15 +22,15 @@ npx shadcn-ng@latest add button
 
 <TabsContent value="manual">
 
-<Step>
+<Steps>
 
-<StepItem>Copy and paste the following code into your project.</StepItem>
+<Step>Copy and paste the following code into your project.</Step>
 
 <ComponentSource name="button" />
 
-<StepItem>Update the import paths to match your project setup.</StepItem>
+<Step>Update the import paths to match your project setup.</Step>
 
-</Step>
+</Steps>
 
 </TabsContent>
 </Tabs>
