--- a/docs/src/content/docs/components/accordion.mdx
+++ b/docs/src/content/docs/components/accordion.mdx
@@ -29,21 +29,21 @@ npx shadcn-ng@latest add accordion
 
 <TabsContent value="manual">
 
-<Step>
+<Steps>
 
-<StepItem>Install the following dependencies:</StepItem>
+<Step>Install the following dependencies:</Step>
 
 ```bash
 npm install @ng-icons/core @ng-icons/lucide
 ```
 
-<StepItem>Copy and paste the following code into your project.</StepItem>
+<Step>Copy and paste the following code into your project.</Step>
 
 <ComponentSource name="accordion" />
 
-<StepItem>Update the import paths to match your project setup.</StepItem>
+<Step>Update the import paths to match your project setup.</Step>
 
-<StepItem>Update `tailwind.config.js`</StepItem>
+<Step>Update `tailwind.config.js`</Step>
 
 Add the following animations to your `tailwind.config.js` file:
 
@@ -71,7 +71,7 @@ module.exports = {
 }
 ```
 
-</Step>
+</Steps>
 
 </TabsContent>
 
