--- a/docs/src/content/docs/components/alert.mdx
+++ b/docs/src/content/docs/components/alert.mdx
@@ -21,13 +21,13 @@ npx shadcn-ng@latest add alert
 </TabsContent>
 
 <TabsContent value="manual">
-<Step>
-<StepItem>Copy and paste the following code into your project.</StepItem>
+<Steps>
+<Step>Copy and paste the following code into your project.</Step>
 
 <ComponentSource name="alert" />
 
-<StepItem>Update the import paths to match your project setup.</StepItem>
-</Step>
+<Step>Update the import paths to match your project setup.</Step>
+</Steps>
 
 </TabsContent>
 </Tabs>
