--- a/docs/src/content/docs/components/avatar.mdx
+++ b/docs/src/content/docs/components/avatar.mdx
@@ -22,13 +22,13 @@ npx shadcn-ng@latest add avatar
 </TabsContent>
 
 <TabsContent value="manual">
-<Step>
-<StepItem>Copy and paste the following code into your project.</StepItem>
+<Steps>
+<Step>Copy and paste the following code into your project.</Step>
 
 <ComponentSource name="avatar" />
 
-<StepItem>Update the import paths to match your project setup.</StepItem>
-</Step>
+<Step>Update the import paths to match your project setup.</Step>
+</Steps>
 
 </TabsContent>
 </Tabs>
