--- a/docs/src/content/docs/components/breadcrumb.mdx
+++ b/docs/src/content/docs/components/breadcrumb.mdx
@@ -23,15 +23,15 @@ npx shadcn-ng@latest add breadcrumb
 
 <TabsContent value="manual">
 
-<Step>
+<Steps>
 
-<StepItem>Copy and paste the following code into your project.</StepItem>
+<Step>Copy and paste the following code into your project.</Step>
 
 <ComponentSource name="breadcrumb" />
 
-<StepItem>Update the import paths to match your project setup.</StepItem>
+<Step>Update the import paths to match your project setup.</Step>
 
-</Step>
+</Steps>
 
 </TabsContent>
 </Tabs>
