--- a/docs/src/content/docs/components/card.mdx
+++ b/docs/src/content/docs/components/card.mdx
@@ -24,15 +24,15 @@ npx shadcn-ng@latest add card
 
 <TabsContent value="manual">
 
-<Step>
+<Steps>
 
-<StepItem>Copy and paste the following code into your project.</StepItem>
+<Step>Copy and paste the following code into your project.</Step>
 
 <ComponentSource name="card" />
 
-<StepItem>Update the import paths to match your project setup.</StepItem>
+<Step>Update the import paths to match your project setup.</Step>
 
-</Step>
+</Steps>
 
 </TabsContent>
 
