--- a/docs/src/content/docs/components/switch.mdx
+++ b/docs/src/content/docs/components/switch.mdx
@@ -28,15 +28,15 @@ npx shadcn-ng@latest add switch
 
 <TabsContent value="manual">
 
-<Step>
+<Steps>
 
-<StepItem>Copy and paste the following code into your project.</StepItem>
+<Step>Copy and paste the following code into your project.</Step>
 
 <ComponentSource name="switch" />
 
-<StepItem>Update the import paths to match your project setup.</StepItem>
+<Step>Update the import paths to match your project setup.</Step>
 
-</Step>
+</Steps>
 
 </TabsContent>
 
