--- a/docs/src/content/docs/components/table.mdx
+++ b/docs/src/content/docs/components/table.mdx
@@ -26,15 +26,15 @@ npx shadcn-ng@latest add table
 
 <TabsContent value="manual">
 
-<Step>
+<Steps>
 
-<StepItem>Copy and paste the following code into your project.</StepItem>
+<Step>Copy and paste the following code into your project.</Step>
 
 <ComponentSource name="table" />
 
-<StepItem>Update the import paths to match your project setup.</StepItem>
+<Step>Update the import paths to match your project setup.</Step>
 
-</Step>
+</Steps>
 
 </TabsContent>
 
