docs: fix layout

--- a/docs/src/content/docs/components/accordion.mdx
+++ b/docs/src/content/docs/components/accordion.mdx
@@ -87,7 +87,7 @@ import {
 } from '@/components/ui/accordion.directive';
 ```
 
-```html
+```html title="accordion.html" showLineNumbers
 <div ubAccordion class="w-full" orientation="vertical">
     <div ubAccordionItem value="item-1">
         <ub-accordion-trigger>Is it accessible?</ub-accordion-trigger>
