--- a/docs/src/content/docs/theming.mdx
+++ b/docs/src/content/docs/theming.mdx
@@ -7,7 +7,7 @@ You can choose between using CSS variables or Tailwind CSS utility classes for t
 
 ## Utility classes
 
-```ts /bg-zinc-950/ /text-zinc-50/ /dark:bg-white/ /dark:text-zinc-950/
+```html /bg-zinc-950/ /text-zinc-50/ /dark:bg-white/ /dark:text-zinc-950/
 <div class="bg-zinc-950 dark:bg-white" />
 ```
 
@@ -31,7 +31,7 @@ To use utility classes for theming set `tailwind.cssVariables` to `false` in you
 
 ## CSS Variables
 
-```ts /bg-background/ /text-foreground/
+```html /bg-background/ /text-foreground/
 <div class="bg-background text-foreground" />
 ```
 
@@ -72,7 +72,7 @@ Given the following CSS variables:
 
 The `background` color of the following component will be `hsl(var(--primary))` and the `foreground` color will be `hsl(var(--primary-foreground))`.
 
-```ts
+```html
 <div class="bg-primary text-primary-foreground">Hello</div>
 ```
 
@@ -174,7 +174,7 @@ module.exports = {
 
 You can now use the `warning` utility class in your components.
 
-```ts /bg-warning/ /text-warning-foreground/
+```html /bg-warning/ /text-warning-foreground/
 <div class="bg-warning text-warning-foreground" />
 ```
 
