docs: optimize image loading

--- a/docs/src/content/docs/components/aspect-ratio.mdx
+++ b/docs/src/content/docs/components/aspect-ratio.mdx
@@ -6,6 +6,8 @@ links:
   api: https://www.radix-ng.com/primitives/components/aspect-ratio#api-reference
 ---
 
+<link rel="preconnect" href="https://images.unsplash.com" />
+
 <ComponentPreview
   name="aspect-ratio-demo"
   title="Aspect Ratio"
