--- a/docs/src/content/docs/components/accordion.mdx
+++ b/docs/src/content/docs/components/accordion.mdx
@@ -7,6 +7,7 @@ links:
 
 <ComponentPreview
   name="accordion-demo"
+  class="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
 ## Installation
