docs: update links

--- a/docs/src/content/docs/components/avatar.mdx
+++ b/docs/src/content/docs/components/avatar.mdx
@@ -2,7 +2,8 @@
 title: Avatar
 description: An image element with a fallback for representing the user.
 links:
-  doc: https://www.radix-ng.com/?path=/docs/primitives-avatar--docs
+  doc: https://www.radix-ng.com/primitives/components/avatar
+  api: https://www.radix-ng.com/primitives/components/avatar#api-reference
 ---
 
 <ComponentPreview name="avatar-demo" />
