--- a/docs/src/content/docs/components/switch.mdx
+++ b/docs/src/content/docs/components/switch.mdx
@@ -2,7 +2,8 @@
 title: Switch
 description: A control that allows the user to toggle between checked and not checked.
 links:
-  doc: https://www.radix-ng.com/?path=/docs/primitives-switch--docs
+  doc: https://www.radix-ng.com/primitives/components/switch
+  api: https://www.radix-ng.com/primitives/components/switch#api-reference
 ---
 
 <ComponentPreview name="switch-demo" />
