--- a/docs/src/content/docs/components/tabs.mdx
+++ b/docs/src/content/docs/components/tabs.mdx
@@ -2,7 +2,8 @@
 title: Tabs
 description: A set of layered sections of content—known as tab panels—that are displayed one at a time.
 links:
-  doc: https://www.radix-ng.com/?path=/story/primitives-tabs--default
+  doc: https://www.radix-ng.com/primitives/components/tabs
+  api: https://www.radix-ng.com/primitives/components/tabs#api-reference
 ---
 
 <ComponentPreview name="tabs-demo" />
