--- a/docs/src/content/docs/components/accordion.mdx
+++ b/docs/src/content/docs/components/accordion.mdx
@@ -2,7 +2,8 @@
 title: Accordion
 description: A vertically stacked set of interactive headings that each reveal a section of content.
 links:
-  doc: https://www.radix-ng.com/?path=/docs/primitives-accordion--docs
+  doc: https://www.radix-ng.com/primitives/components/accordion
+  api: https://www.radix-ng.com/primitives/components/accordion#api-reference
 ---
 
 <ComponentPreview
