--- a/docs/src/content/docs/theming.mdx
+++ b/docs/src/content/docs/theming.mdx
@@ -77,32 +77,33 @@ The `background` color of the following component will be `hsl(var(--primary))` 
 ```
 
 <Callout>
-  **CSS variables must be defined without color space function**. See the
-  [Tailwind CSS
-  documentation](https://tailwindcss.com/docs/customizing-colors#using-css-variables)
-  for more information.
+
+**CSS variables must be defined without color space function**. See the [Tailwind CSS documentation](https://tailwindcss.com/docs/customizing-colors#using-css-variables) for more information.
+
 </Callout>
 
 ### List of variables
 
 Here's the list of variables available for customization:
 
-```css title="Default background color"
+<Steps>
+
+```css title="Default background color of <body />...etc"
 --background: 0 0% 100%;
 --foreground: 222.2 47.4% 11.2%;
 ```
 
-```css title="Muted backgrounds"
+```css title="Muted backgrounds such as <TabsList />, <Skeleton /> and <Switch />"
 --muted: 210 40% 96.1%;
 --muted-foreground: 215.4 16.3% 46.9%;
 ```
 
-```css title="Background color"
+```css title="Background color for <Card />"
 --card: 0 0% 100%;
 --card-foreground: 222.2 47.4% 11.2%;
 ```
 
-```css title="Background color for popovers"
+```css title="Background color for popovers such as <DropdownMenu />, <HoverCard />, <Popover />"
 --popover: 0 0% 100%;
 --popover-foreground: 222.2 47.4% 11.2%;
 ```
@@ -111,26 +112,26 @@ Here's the list of variables available for customization:
 --border: 214.3 31.8% 91.4%;
 ```
 
-```css title="Border color"
+```css title="Border color for inputs such as <Input />, <Select />, <Textarea />"
 --input: 214.3 31.8% 91.4%;
 ```
 
-```css title="Primary colors"
+```css title="Primary colors for <Button />"
 --primary: 222.2 47.4% 11.2%;
 --primary-foreground: 210 40% 98%;
 ```
 
-```css title="Secondary colors"
+```css title="Secondary colors for <Button />"
 --secondary: 210 40% 96.1%;
 --secondary-foreground: 222.2 47.4% 11.2%;
 ```
 
-```css title="Used for accents"
+```css title="Used for accents such as hover effects on <DropdownMenuItem>, <SelectItem>...etc"
 --accent: 210 40% 96.1%;
 --accent-foreground: 222.2 47.4% 11.2%;
 ```
 
-```css title="Used for destructive actions"
+```css title="Used for destructive actions such as <Button variant="destructive">"
 --destructive: 0 100% 50%;
 --destructive-foreground: 210 40% 98%;
 ```
@@ -143,11 +144,13 @@ Here's the list of variables available for customization:
 --radius: 0.5rem;
 ```
 
+</Steps>
+
 ### Adding new colors
 
 To add new colors, you need to add them to your CSS file and to your `tailwind.config.js` file.
 
-```css title="app/globals.css"
+```css title="src/styles.css"
 :root {
   --warning: 38 92% 50%;
   --warning-foreground: 48 96% 89%;
@@ -169,7 +172,7 @@ module.exports = {
       },
     },
   },
-};
+}
 ```
 
 You can now use the `warning` utility class in your components.
