--- a/docs/src/content/docs/installation/angular.mdx
+++ b/docs/src/content/docs/installation/angular.mdx
@@ -5,84 +5,46 @@ description: Install and configure Angular.
 
 <Steps>
 
-<Step>
 ### Create project
-</Step>
 
-Start by creating a new App using the Angular CLI.
-
-```bash
-ng new my-app
-```
-
-<Step>
-### Add Tailwind and its configuration
-</Step>
-
-Install `tailwindcss` and its peer dependencies, then generate your `tailwind.config.js` file:
-
-```bash
-npm install -D tailwindcss postcss autoprefixer
-
-npx tailwindcss init
-```
-
-<Step>
-### Edit tsconfig.json file
-</Step>
-
-```json {3-6} showLineNumbers
-{
-    "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "@/*": ["./src/*"]
-        }
-    }
-}
-```
-
-<Step>
-### Run the CLI
-</Step>
-
-Run the `shadcn-ng` init command to setup your project:
+Run the `init` command to create a new Angular project or to setup an existing one:
 
 ```bash
 npx shadcn-ng@latest init
 ```
 
-<Step>
+<Callout class="mt-4">
+
+You can use the `-d` flag for defaults i.e `new-york`, `zinc` and `yes` for the css variables.
+
+```bash
+npx shadcn-ng@latest init -d
+```
+
+</Callout>
+
 ### Configure components.json
-</Step>
 
 You will be asked a few questions to configure `components.json`:
 
 ```txt showLineNumbers
-Which style would you like to use? › Default
-Which color would you like to use as base color? › Slate
-Where is your global CSS file? › src/style.css
+Which style would you like to use? › New York
+Which color would you like to use as base color? › Zinc
 Do you want to use CSS variables for colors? › no / yes
-Where is your tailwind.config.js located? › tailwind.config.js
-Configure the import alias for components: › @/components
-Configure the import alias for utils: › @/lib/utils
 ```
-
-<Step>
 ### That's it
-</Step>
 
 You can now start adding components to your project.
 
 ```bash
-npx shadcn-ui@latest add button
+npx shadcn-ng@latest add button
 ```
 
 The command above will add the `Button` component to your project. You can then import it like this:
 
-```ts {2,7}
+```angular-ts {2,6,7} showLineNumbers
 import { Component } from "@angular/core";
-import { UbButtonDirective } from "@/components/ui/button.directive";
+import { UbButtonDirective } from "@/components/ui/button";
 
 @Component({
     standalone: true,
