docs: update component previews with additional classes

--- a/docs/src/content/docs/components/accordion.mdx
+++ b/docs/src/content/docs/components/accordion.mdx
@@ -8,7 +8,8 @@ links:
 
 <ComponentPreview
   name="accordion-demo"
-  class="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
+  class="[&_.preview>div>[data-orientation=vertical]]:sm:max-w-[70%]"
+  description="An accordion with three items"
 />
 
 ## Installation
