--- a/docs/src/content/docs/components/breadcrumb.mdx
+++ b/docs/src/content/docs/components/breadcrumb.mdx
@@ -3,7 +3,10 @@ title: Breadcrumb
 description: Displays the path to the current resource using a hierarchy of links.
 ---
 
-<ComponentPreview name="breadcrumb-demo" />
+<ComponentPreview
+  name="breadcrumb-demo"
+  class="[&_.preview>div]:p-2"
+/>
 
 ## Installation
 
