--- a/docs/src/content/docs/components/input.mdx
+++ b/docs/src/content/docs/components/input.mdx
@@ -3,7 +3,10 @@ title: Input
 description: Displays a form input field or a component that looks like an input field.
 ---
 
-<ComponentPreview name="input-demo" />
+<ComponentPreview
+  name="input-demo"
+  class="[&_input]:max-w-xs"
+/>
 
 ## Installation
 
