--- a/docs/src/content/docs/components/typography.mdx
+++ b/docs/src/content/docs/components/typography.mdx
@@ -3,7 +3,10 @@ title: Typography
 description: Styles for headings, paragraphs, lists...etc
 ---
 
-<ComponentPreview name="typography-demo" />
+<ComponentPreview
+  name="typography-demo"
+  class="[&>div.min-h-[350px]]:p-6"
+/>
 
 ## h1
 
