--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -14,3 +14,9 @@ I mean you do not install it as a dependency. It is not available or distributed
 Pick the components you need. Copy and paste the code into your project and customize to your needs. The code is yours.
 
 _Use this as a reference to build your own component libraries._
+
+import { Faq } from '@/components/faq.ts'
+
+## FAQ
+
+<Faq client:load />
