--- a/apps/www/src/content/docs/cli.mdx
+++ b/apps/www/src/content/docs/cli.mdx
@@ -16,25 +16,30 @@ npx shadcn-ng@latest init
 You will be asked a few questions to configure `components.json`:
 
 ```txt showLineNumbers
-Which style would you like to use? › Default
-Which color would you like to use as base color? › Slate
-Where is your global CSS file? › src/styles.css
-Do you want to use CSS variables for colors? › no / yes
-Where is your tailwind.config.js located? › tailwind.config.js
-Configure the import alias for components: › @/components
-Configure the import alias for utils: › @/lib/utils
+◇  Verifying framework. Found Angular
+│
+◇  Which color would you like to use as the base color?
+│  Zinc
+│
+◆  Would you like to use CSS variables for theming?
+│  ● Yes / ○ No
 ```
 
 ### Options
 
 ```txt
-Usage: shadcn-ng init [options]
+Usage: shadcn-ng init [options] [components...]
 
 initialize your project and install dependencies
 
+Arguments:
+  components       the components to add or a url to the component.
+
 Options:
-  -y, --yes        skip confirmation prompt. (default: false)
   -c, --cwd <cwd>  the working directory. defaults to the current directory.
+  -f, --force      force overwrite of existing configuration. (default: false)
+  -d, --defaults,  use default configuration. (default: false)
+  -y, --yes        skip confirmation prompt. (default: true)
   -h, --help       display help for command
 ```
 
@@ -72,59 +77,43 @@ Usage: shadcn-ng add [options] [components...]
 add a component to your project
 
 Arguments:
-  components         the components to add
+  components         the components to add or a url to the component.
 
 Options:
   -y, --yes          skip confirmation prompt. (default: false)
   -o, --overwrite    overwrite existing files. (default: false)
   -c, --cwd <cwd>    the working directory. defaults to the current directory.
+  -a, --all          add all available components (default: false)
   -p, --path <path>  the path to add the component to.
   -h, --help         display help for command
 ```
 
-## diff (experimental)
+## build
 
-You can use the diff command to check for updates against the registry.
-
-Run the following command to get a list of components that have updates available:
+Use the `build` command to generate the registry JSON files.
 
 ```bash
-npx shadcn-ng diff
+npx shadcn-ng@latest build
 ```
+
+This command reads the `registry.json` file and generates the registry JSON files in the `public/r` directory.
 
 ```txt
-The following components have updates available:
-- alert
-  - /path/to/my-app/components/ui/alert.directive.ts
-- button
-  - /path/to/my-app/components/ui/button.directive.ts
-```
+Usage: shadcn-ng build [options] [registry]
 
-Then run `diff [component]` to see the changes:
-
-```bash
-npx shadcn-ng diff alert
-```
-
-```diff /pl-12/
-const alertVariants = cva(
-- "relative w-full rounded-lg border",
-+ "relative w-full pl-12 rounded-lg border"
-)
-```
-
-### Options
-
-```txt
-Usage: shadcn-ng diff [options] [component]
-
-check for updates against the registry
+build components for a shadcn registry
 
 Arguments:
-  component        the component name
+  registry             path to registry.json file (default: "./registry.json")
 
 Options:
-  -y, --yes        skip confirmation prompt. (default: false)
-  -c, --cwd <cwd>  the working directory. defaults to the current directory.
-  -h, --help       display help for command
+  -o, --output <path>  destination directory for json files (default: "./public/r")
+  -c, --cwd <cwd>      the working directory. defaults to the current directory.
+  -h, --help           display help for command
+```
+
+To customize the output directory, use the `--output` option.
+
+```bash
+npx shadcn-ng@latest build --output ./public/registry
 ```
