docs: update CLI references to shadcn-ng and add template project link

--- a/apps/www/src/content/docs/registry/getting-started.mdx
+++ b/apps/www/src/content/docs/registry/getting-started.mdx
@@ -158,7 +158,7 @@ Here are some guidelines to follow when building components for a registry.
 
 ## Install using the CLI
 
-To install a registry item using the `shadcn` CLI, use the `add` command followed by the URL of the registry item.
+To install a registry item using the `shadcn-ng` CLI, use the `add` command followed by the URL of the registry item.
 
 ```bash
 npx shadcn-ng@latest add http://localhost:4200/r/hello-world.json
