--- a/apps/www/src/content/docs/registry/index.mdx
+++ b/apps/www/src/content/docs/registry/index.mdx
@@ -16,3 +16,5 @@ Registry items are automatically compatible with the `shadcn-ng` CLI.
 ## Requirements
 
 You are free to design and host your custom registry as you see fit. The only requirement is that your registry items must be valid JSON files that conform to the [registry-item schema specification](/docs/registry/registry-item-json).
+
+If you'd like to see an example of a registry, we have a [template project](https://github.com/adrian-ub/registry-ng-template) for you to use as a starting point.
