docs: add build-registry

--- a/docs/src/content/docs/installation/manual.mdx
+++ b/docs/src/content/docs/installation/manual.mdx
@@ -16,7 +16,7 @@ Components are styled using Tailwind CSS. You need to install Tailwind CSS in yo
 Add the following dependencies to your project:
 
 ```bash
-npm install class-variance-authority clsx tailwind-merge lucide-react tw-animate-css
+npm install class-variance-authority clsx tailwind-merge @ngxi/lucide tw-animate-css
 ```
 
 ### Configure path aliases
@@ -187,7 +187,7 @@ Create a `components.json` file in the root of your project.
 
 ```json title="components.json" showLineNumbers
 {
-  "$schema": "https://ui.shadcn.com/schema.json",
+  "$schema": "https://ui.adrianub.dev/schema.json",
   "style": "new-york",
   "rsc": false,
   "tsx": true,
