feat: migrate to `mdx`

--- a/apps/v4/src/content/docs/docs/installation/index.mdx
+++ b/apps/v4/src/content/docs/docs/installation/index.mdx
@@ -7,7 +7,7 @@ description: How to install dependencies and structure your app.
 
 Start by selecting your framework of choice. Then follow the instructions to install the dependencies and structure your app. shadcn-ng is built to work with Angular.
 
-<!-- <CardGrid>
+{/* <!-- <CardGrid>
   <LinkCard title="Angular" icon="open-book" href="/docs/installation/angular"></LinkCard>
   <LinkCard title="Manual" icon="information" href="/docs/installation/manual"></LinkCard>
-</CardGrid> -->
+</CardGrid> --> */}
