--- a/apps/v4/src/content/docs/docs/installation/manual.mdx
+++ b/apps/v4/src/content/docs/docs/installation/manual.mdx
@@ -38,7 +38,7 @@ The `@` alias is a preference. You can use other aliases if you want.
 
 Add the following to your styles.css file. You can learn more about using CSS variables for theming in the [theming section](/docs/theming).
 
-<!-- <CodeCollapsibleWrapper>  -->
+{/* <!-- <CodeCollapsibleWrapper>  --> */}
 
 ```css showLineNumbers title="src/styles.css"
 @import "tailwindcss";
@@ -166,7 +166,7 @@ Add the following to your styles.css file. You can learn more about using CSS va
 }
 ```
 
- <!-- </CodeCollapsibleWrapper> -->
+ {/* </CodeCollapsibleWrapper> */}
 
 ### Add a cn helper
 
