--- a/apps/v4/src/content/docs/docs/index.mdx
+++ b/apps/v4/src/content/docs/docs/index.mdx
@@ -27,7 +27,7 @@ shadcn-ng hands you the actual component code. You have full control to customiz
 
 _In a typical library, if you need to change a button’s behavior, you have to override styles or wrap the component. With shadcn-ng, you simply edit the button code directly._
 
-<!-- <details>
+<details>
 <summary>How do I pull upstream updates in an Open Code approach?</summary>
 
 <p>
@@ -41,7 +41,7 @@ _In a typical library, if you need to change a button’s behavior, you have to 
   modification.
 </p>
 
-</details> -->
+</details>
 
 ## Composition
 
