--- a/apps/v4/src/content/docs/docs/components/button.mdx
+++ b/apps/v4/src/content/docs/docs/components/button.mdx
@@ -7,6 +7,42 @@ description: Displays a button or a component that looks like a button.
 
 ## Installation
 
+<CodeTabs>
+
+<TabsList>
+  <TabsTrigger value="cli">CLI</TabsTrigger>
+  <TabsTrigger value="manual">Manual</TabsTrigger>
+</TabsList>
+<TabsContent value="cli">
+
 ```bash
-npx shadcn@latest add button
+npx shadcn-ng@latest add button
+```
+
+</TabsContent>
+
+<TabsContent value="manual">
+
+<Steps>
+
+<Step>Copy and paste the following code into your project.</Step>
+
+<ComponentSource name="button" title="components/ui/button.ts" />
+
+<Step>Update the import paths to match your project setup.</Step>
+
+</Steps>
+
+</TabsContent>
+
+</CodeTabs>
+
+## Usage
+
+```ts
+import { Button } from "@/components/ui/button"
+```
+
+```html
+<button ubButton variant="outline">Button</button>
 ```
