--- a/apps/v4/src/content/docs/docs/index.mdx
+++ b/apps/v4/src/content/docs/docs/index.mdx
@@ -27,21 +27,25 @@ shadcn-ng hands you the actual component code. You have full control to customiz
 
 _In a typical library, if you need to change a button’s behavior, you have to override styles or wrap the component. With shadcn-ng, you simply edit the button code directly._
 
-<details>
-<summary>How do I pull upstream updates in an Open Code approach?</summary>
-
-<p>
-  shadcn-ng follows a headless component architecture. This means the core
-  of your app can receive fixes by updating your dependencies, for
-  instance, radix-ng.
-</p>
-<p class="mt-4">
-  The topmost layer, i.e., the one closest to your design system, is not
-  coupled with the implementation of the library. It stays open for
-  modification.
-</p>
-
-</details>
+<Accordion collapsible>
+  <AccordionItem value="faq-1" class="border-none">
+    <AccordionTrigger class="w-full">
+      How do I pull upstream updates in an Open Code approach?
+    </AccordionTrigger>
+    <AccordionContent>
+      <p>
+        shadcn-ng follows a headless component architecture. This means the core
+        of your app can receive fixes by updating your dependencies, for
+        instance, radix-ng.
+      </p>
+      <p class="mt-4">
+        The topmost layer, i.e., the one closest to your design system, is not
+        coupled with the implementation of the library. It stays open for
+        modification.
+      </p>
+    </AccordionContent>
+  </AccordionItem>
+</Accordion>
 
 ## Composition
 
