--- a/apps/v4/src/content/docs/docs/installation/index.mdx
+++ b/apps/v4/src/content/docs/docs/installation/index.mdx
@@ -7,7 +7,10 @@ description: How to install dependencies and structure your app.
 
 Start by selecting your framework of choice. Then follow the instructions to install the dependencies and structure your app. shadcn-ng is built to work with Angular.
 
-{/* <!-- <CardGrid>
-  <LinkCard title="Angular" icon="open-book" href="/docs/installation/angular"></LinkCard>
-  <LinkCard title="Manual" icon="information" href="/docs/installation/manual"></LinkCard>
-</CardGrid> --> */}
+<div class="mt-8 grid gap-4 sm:grid-cols-2 sm:gap-6">
+  <LinkedCard href="/docs/installation/manual">
+    <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="h-10 w-10"
+      fill="currentColor"><title>Angular</title><path d="M16.712 17.711H7.288l-1.204 2.916L12 24l5.916-3.373-1.204-2.916ZM14.692 0l7.832 16.855.814-12.856L14.692 0ZM9.308 0 .662 3.999l.814 12.856L9.308 0Zm-.405 13.93h6.198L12 6.396 8.903 13.93Z"/></svg>
+    <p class="mt-2 font-medium">Manual</p>
+  </LinkedCard>
+</div>
