fix: remove trailing slash

--- a/apps/v4/src/content/docs/index.mdx
+++ b/apps/v4/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ hero:
   tagline: A set of beautifully designed components that you can customize, extend, and build on. Start here then make it your own. Open Source. Open Code.
   actions:
     - text: Get Started
-      link: /docs/installation/
+      link: /docs/installation
     - text: View Components
       link: /docs/components
       variant: minimal
