feat: update docs

--- a/apps/v4/src/content/docs/docs/registry/index.mdx
+++ b/apps/v4/src/content/docs/docs/registry/index.mdx
@@ -4,3 +4,56 @@ description: Run your own code registry.
 ---
 
 You can use the `shadcn-ng` CLI to run your own code registry. Running your own registry allows you to distribute your custom components, hooks, pages, config, rules and other files to any project.
+
+<Callout>
+  **Note:** The registry works with any project type and any framework, and is
+  not limited to Angular.
+</Callout>
+
+Ready to create your own registry? In the next section, we'll walk you through setting up your own custom registry step-by-step, from creating your first component to publishing it for others to use.
+
+<div class="mt-6 grid gap-4 sm:grid-cols-2">
+  <LinkedCard href="/docs/registry/getting-started" class="items-start text-sm md:p-6">
+    <div class="font-medium">Getting Started</div>
+    <div class="text-muted-foreground">
+      Set up and build your own registry
+    </div>
+  </LinkedCard>
+
+<LinkedCard
+  href="/docs/registry/authentication"
+  class="items-start text-sm md:p-6"
+>
+  <div class="font-medium">Authentication</div>
+  <div class="text-muted-foreground">
+    Secure your registry with authentication
+  </div>
+</LinkedCard>
+<LinkedCard
+  href="/docs/registry/namespace"
+  class="items-start text-sm md:p-6"
+>
+  <div class="font-medium">Namespaces</div>
+  <div class="text-muted-foreground">
+    Configure registries with namespaces
+  </div>
+</LinkedCard>
+<LinkedCard
+  href="/docs/registry/examples"
+  class="items-start text-sm md:p-6"
+>
+  <div class="font-medium">Examples</div>
+  <div class="text-muted-foreground">
+    Registry item examples and configurations
+  </div>
+</LinkedCard>
+  <LinkedCard
+    href="/docs/registry/registry-json"
+    class="items-start text-sm md:p-6"
+  >
+    <div class="font-medium">Schema</div>
+    <div class="text-muted-foreground">
+      Schema specification for registry.json
+    </div>
+  </LinkedCard>
+</div>
